--- a/src/index.css
+++ b/src/index.css
@@ -2,17 +2,17 @@ body {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
-  background-color: #f4f4f9;
-  color: #333;
+  background-color: hwb(55 62% 0% / 0.637);
+  color: rgb(14, 13, 13);
 }
 
 h1 {
-  color: #4caf50;
+  color: rgb(229, 5, 5);
 }
 
 a {
   text-decoration: none;
-  color: #4caf50;
+  color: #141814;
   margin-right: 10px;
 }
 
@@ -22,7 +22,7 @@ form div {
 
 button {
   background-color: #4caf50;
-  color: white;
+  color: #14611f;
   border: none;
   padding: 5px 10px;
   cursor: pointer;
